# Advanced-OOP

ex1/: BattleShip.cpp  BattleShip.h  BattleShipLayouts.cpp  BattleShipLayouts.h  CMakeLists.txt  Main.cpp  students.txt
ex2/: BattleShipLayouts.cpp  BattleShipLayouts.h  BattleShipPlayer.h  BattleshipAnimationUtils.cpp  BattleshipAnimationUtils.h  BattleshipManager.cpp  BattleshipManager.h  CMakeLists.txt  Ex1Algo.cpp  Ex1Algo.h  IBattleshipGameAlgo.h  IBattleshipGameAlgoCommon.cpp  IBattleshipGameAlgoCommon.h  Main.cpp  Naive.cpp  Naive.h  Types.h  Ultimate.cpp  Ultimate.h  board_8.sboard  clean_movesA.attack  clean_movesB.attack  students.txt
ex3/: Advanced-OOP-Ex3.sln  BattleShipLayouts.cpp  BattleShipLayouts.h  BattleShipPlayer.h  BattleshipCompetitionManager.cpp  BattleshipCompetitionManager.h  BattleshipLogger.cpp  BattleshipLogger.h  BattleshipManager.cpp  BattleshipManager.h  CMakeLists.txt  CoordinateSTL.h  IBattleshipGameAlgo.h  LoggerUtils.h  MotherOfAllAlgos.cpp  MotherOfAllAlgos.h  Types.h  a.config  main.cpp
ex3/Advanced-OOP-Ex3/: Advanced-OOP-Ex3.vcxproj  Advanced-OOP-Ex3.vcxproj.filters  BattleShipLayouts.cpp  BattleShipLayouts.h  BattleShipPlayer.h  BattleshipCompetitionManager.cpp  BattleshipCompetitionManager.h  BattleshipLogger.cpp  BattleshipLogger.h  BattleshipManager.cpp  BattleshipManager.h  IBattleshipGameAlgo.h  LoggerUtils.h  Types.h  main.cpp
ex3/MotherOfAll/: MotherOfAll.cpp  MotherOfAll.h
ex3/MotherOfAllAlgos/: CoordinateSTL.h  MotherOfAllAlgos.cpp  MotherOfAllAlgos.h  MotherOfAllAlgos.vcxproj  MotherOfAllAlgos.vcxproj.filters  Types.h
ex3/set/: set.vcxproj.filters
ex4/: CMakeLists.txt  Matrix.h  Types.h  main.cpp
